--- a/VersionConfig.yaml
+++ b/VersionConfig.yaml
@@ -7,7 +7,7 @@ branches:
     track-merge-target: false
     tracks-release-branches: true
     is-release-branch: false
-    is-mainline: true
+    is-mainline: false
   feature:
     regex: ^features?[/-]
     tag: 'feature-{BranchName}'
@@ -16,7 +16,7 @@ branches:
     track-merge-target: false
     tracks-release-branches: true
     is-release-branch: false
-    source-branches: ['master','release','feature','hotfix']
+    # source-branches: ['master','release','feature','hotfix']
   pull-request:
     regex: ^(pull|pull\-requests|pr)[/-]
     mode: ContinuousDeployment
@@ -25,7 +25,7 @@ branches:
     prevent-increment-of-merged-branch-version: false
     tag-number-pattern: '[/-](?<number>\d+)[-/]'
     track-merge-target: false
-    source-branches: [ 'master', 'release', 'feature', 'hotfix' ]
+    # source-branches: [ 'master', 'release', 'feature', 'hotfix' ]
     tracks-release-branches: false
     is-release-branch: false
     is-mainline: false
@@ -38,7 +38,7 @@ branches:
     track-merge-target: false
     tracks-release-branches: true
     is-release-branch: false
-    source-branches: ['master','release','feature','hotfix']
+    # source-branches: ['master','release','feature','hotfix']
   release:
     regex: ^releases?[/-]
     tag: ''
@@ -47,7 +47,7 @@ branches:
     track-merge-target: true
     tracks-release-branches: false
     is-release-branch: true
-    source-branches: ['master']
+    # source-branches: ['master']
 
 ignore:
   sha: []
