--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -12,11 +12,36 @@ on:
     branches:
     - develop
 
-jobs:        
-  calculate-version:
+jobs:
+  get_increment_strategies:
+    runs-on: ubuntu-latest
+    outputs:
+      config_file: ${{ steps.get_increment_strategies.outputs.config_file }}
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.EDGARPAT }}
+      - name: get_increment_strategies
+        id: get_increment_strategies
+        run: |
+          parent_regex="^(hot)?fix(es)?[/-].+|^releases?[/-].+"
+          actual_regex="^releases?[/-].+"
+          parent_branch=$(git show-branch | grep '*' | grep -v "$(git rev-parse --abbrev-ref HEAD)" | head -n1 | sed 's/.*\[\(.*\)\].*/\1/' | sed 's/[\^~].*//')
+          actual_branch=$(git symbolic-ref --short HEAD)
+          if [[ $actual_branch =~ $actual_regex ]] && [[ $parent_branch =~ $parent_regex ]]
+          then
+            file_path="version_config_files/release_patch_config.yaml"
+            
+          else
+            file_path="version_config_files/release_major_config.yaml"
+          fi
+          echo "config_file=$file_path" >> $GITHUB_OUTPUT
+
+  calculate_version:
     uses: ./.github/workflows/calculate-version.yaml
+    needs: [get_increment_strategies]
     secrets: inherit
     with:
       VERSION_USE_CONFIG_FILE: true
       WITH_REPO_TAGGING: true
-        
+      VERSION_CONFIG_FILE: ${{needs.get_increment_strategies.outputs.config_file}}
