--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -33,11 +33,15 @@ jobs:
           file_path="version_config_files/release_major_config.yaml"
           if [[ "$GITHUB_EVENT_NAME" != "pull_request" ]]
           then
+            echo "Adentro del selector de configuracion"
             head_tag=$(get_tag HEAD)
             prev_tag=$(get_tag HEAD~1)
             actual_branch=$(git symbolic-ref --short HEAD)
+            echo "el tag actual es: $head_tag"
+            echo "el tag anterior es: $prev_tag"
+            echo "la rama actual es: $actual_branch"
             tag_to_compare=${head_tag:-$prev_tag}
-            
+            echo "el tag a usar es: $tag_to_compare"
             actual_branch_regex="^releases?[/-].+"
             prev_tag_regex="[[:digit:]]+\.0\.[[:digit:]]+|(hot)?fix(es)?"
             
