--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -34,8 +34,8 @@ jobs:
           if [[ "$GITHUB_EVENT_NAME" != "pull_request" ]]
           then
             echo "Adentro del selector de configuracion"
-            head_tag=$(get_tag HEAD)
-            prev_tag=$(get_tag HEAD~1)
+            git describe --tags --exact-match "$HEAD" 2>/dev/null || echo ""
+            git describe --tags --exact-match "HEAD~1" 2>/dev/null || echo ""
             actual_branch=$(git symbolic-ref --short HEAD)
             echo "el tag actual es: $head_tag"
             echo "el tag anterior es: $prev_tag"
