--- a/version_config_files/release_major_config.yaml
+++ b/version_config_files/release_major_config.yaml
@@ -34,7 +34,7 @@ branches:
     regex: ^(hot)?fix(es)?[/-]
     tag: ''
     increment: Patch
-    prevent-increment-of-merged-branch-version: false
+    prevent-increment-of-merged-branch-version: true
     track-merge-target: false
     tracks-release-branches: true
     is-release-branch: false
