--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -12,11 +12,53 @@ on:
     branches:
     - develop
 
-jobs:        
-  calculate-version:
+jobs:
+  get_increment_strategies:
+    runs-on: ubuntu-latest
+    outputs:
+      config_file: ${{ steps.get_increment_strategies.outputs.config_file }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.EDGARPAT }}
+          fetch-depth: '0'
+      - name: get_increment_strategies
+        id: get_increment_strategies
+        run: |
+          get_tag() {
+              local commit=$1
+              # Get the tag for the commit, or return an empty string if none
+              git describe --tags --exact-match "$commit" 2>/dev/null || echo ""
+          }
+          echo $GITHUB_EVENT_NAME
+          file_path="version_config_files/release_major_config.yaml"
+          if [[ "$GITHUB_EVENT_NAME" != "pull_request" ]]
+          then
+            echo "Adentro del selector de configuracion"
+            head_tag=$(git describe --tags --exact-match "$HEAD" 2>/dev/null || echo "")
+            prev_tag=$(git describe --tags --exact-match "HEAD~1" 2>/dev/null || echo "")
+            actual_branch=$(git symbolic-ref --short HEAD)
+            echo "el tag actual es: $head_tag"
+            echo "el tag anterior es: $prev_tag"
+            echo "la rama actual es: $actual_branch"
+            tag_to_compare=${head_tag:-$prev_tag}
+            echo "el tag a usar es: $tag_to_compare"
+            actual_branch_regex="^releases?[/-].+"
+            prev_tag_regex="[[:digit:]]+\.0\.[[:digit:]]+|(hot)?fix(es)?"
+            
+            if [[ $tag_to_compare =~ $prev_tag_regex ]] && [[ $actual_branch =~ $actual_branch_regex ]]
+            then
+                file_path="version_config_files/release_patch_config.yaml"               
+            fi
+          fi
+          echo "Config file to use: $file_path"
+          echo "config_file=$file_path" >> $GITHUB_OUTPUT
+
+  calculate_version:
     uses: ./.github/workflows/calculate-version.yaml
+    needs: [get_increment_strategies]
     secrets: inherit
     with:
       VERSION_USE_CONFIG_FILE: true
       WITH_REPO_TAGGING: true
-        
+      VERSION_CONFIG_FILE: ${{needs.get_increment_strategies.outputs.config_file}}
