--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,8 +25,6 @@ jobs:
           fetch-depth: '0'
       - name: get_increment_strategies
         id: get_increment_strategies
-        env:
-          HEAD_REF: ${{ github.head_ref }}
         run: |
           get_tag() {
               local commit=$1
@@ -35,7 +33,8 @@ jobs:
           }
           echo $GITHUB_EVENT_NAME
           file_path="version_config_files/release_major_config.yaml"
-          tag_to_use=$HEAD_REF
+          tag_to_use=$GITHUB_HEAD_REF
+          echo "default tag is: $GITHUB_HEAD_REF"
           if [[ "$GITHUB_EVENT_NAME" != "pull_request" ]]
           then
             head_tag=$(get_tag "HEAD" )
