--- a/version_config_files/release_major_config.yaml
+++ b/version_config_files/release_major_config.yaml
@@ -43,7 +43,7 @@ branches:
     regex: ^releases?[/-]
     tag: ''
     increment: Major
-    prevent-increment-of-merged-branch-version: true
+    prevent-increment-of-merged-branch-version: false
     track-merge-target: true
     tracks-release-branches: false
     is-release-branch: true
