--- a/.github/workflows/calculate-version.yaml
+++ b/.github/workflows/calculate-version.yaml
@@ -7,6 +7,9 @@ on:
       GIT_CHECKOUT_REF: 
         required: false
         type: string
+      GIT_CHECKOUT_TAG:
+        required: false
+        type: string
         default: ${{ github.head_ref }}    
       WITH_REPO_TAGGING: 
         required: false
@@ -48,21 +51,26 @@ jobs:
       version: ${{ steps.final.outputs.version }}
     steps:
     - name: Checkout Repository (Current)
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       if: ${{ inputs.GIT_CHECKOUT_REPO == '' }}
       with:
         ref: ${{ inputs.GIT_CHECKOUT_REF }}
-        fetch-depth: 0
- 
+        fetch-depth: 100
     - name: Checkout Repository (Away)
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       if: ${{ inputs.GIT_CHECKOUT_REPO }}
       with:
         repository: ${{ inputs.GIT_CHECKOUT_REPO }}
         ref: ${{ inputs.GIT_CHECKOUT_REF }}
         fetch-depth: 0
         token: ${{ secrets.CI_PAT }}     
- 
+    - name: Fetch partial tag list
+      if: ${{ inputs.GIT_CHECKOUT_TAG }}
+      env:
+        CHECKOUT_TAG: ${{ inputs.GIT_CHECKOUT_TAG }}
+      run : |
+        git fetch origin "refs/tags/${CHECKOUT_TAG}:refs/tags/${CHECKOUT_TAG}"
+        git tag
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.15
       with:
