--- a/version_config_files/release_major_config.yaml
+++ b/version_config_files/release_major_config.yaml
@@ -7,7 +7,7 @@ branches:
     track-merge-target: false
     tracks-release-branches: true
     is-release-branch: false
-    is-mainline: true
+    source-branches: ['master','release','feature','hotfix']
   feature:
     regex: ^features?[/-]
     tag: 'feature-{BranchName}'
@@ -38,16 +38,16 @@ branches:
     track-merge-target: false
     tracks-release-branches: true
     is-release-branch: false
-    source-branches: ['master','release','feature','hotfix']
+    source-branches: ['master','release','hotfix']
   release:
     regex: ^releases?[/-]
     tag: ''
     increment: Major
-    prevent-increment-of-merged-branch-version: true
+    prevent-increment-of-merged-branch-version: false
     track-merge-target: true
     tracks-release-branches: false
     is-release-branch: true
-    source-branches: ['master']
+    source-branches: ['master','hotfix', 'release']
 
 ignore:
   sha: []
