--- a/.github/workflows/calculate-version.yaml
+++ b/.github/workflows/calculate-version.yaml
@@ -54,7 +54,7 @@ jobs:
     - name: calculate_depth
       run: |
         if [[ "${{ inputs.GIT_CHECKOUT_TAG }}" == "*" ]]; then
-          echo "calc_depth='0'" >> $GITHUB_OUTPUT
+          echo "calc_depth=100" >> $GITHUB_OUTPUT
         else
           echo "calc_depth=100" >> $GITHUB_OUTPUT
         fi
