--- a/.github/workflows/calculate-version.yaml
+++ b/.github/workflows/calculate-version.yaml
@@ -45,31 +45,36 @@ on:
  
  
 jobs:
-  calculate-version:
+  calculate_depth:
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.final.outputs.version }}
       calc_depth: ${{ steps.calculate_depth.outputs.calc_depth }}
     steps:
-    - name: calculate_depth
-      run: |
-        if [[ "${{ inputs.GIT_CHECKOUT_TAG }}" == "*" ]]; then
-          echo "calc_depth=100" >> $GITHUB_OUTPUT
-        else
-          echo "calc_depth=100" >> $GITHUB_OUTPUT
-        fi
-        cat $GITHUB_OUTPUT
+      - name: calculate_depth
+        run: |
+          if [[ "${{ inputs.GIT_CHECKOUT_TAG }}" == "*" ]]; then
+            echo "calc_depth=100" >> $GITHUB_OUTPUT
+          else
+            echo "calc_depth=100" >> $GITHUB_OUTPUT
+          fi
+          cat $GITHUB_OUTPUT
+  calculate-version:
+    runs-on: ubuntu-latest
+    needs: [calculate_depth]
+    outputs:
+      version: ${{ steps.final.outputs.version }}
+    steps:
     - name: Checkout Repository (Current)
       uses: actions/checkout@v4
       if: ${{ inputs.GIT_CHECKOUT_REPO == '' }}
       with:
-        fetch-depth: ${{ steps.calculate_depth.outputs.calc_depth }}
+        fetch-depth: ${{ needs.calculate_depth.outputs.calc_depth }}
         ref: ${{ inputs.GIT_CHECKOUT_REF }}
     - name: Checkout Repository (Away)
       uses: actions/checkout@v4
       if: ${{ inputs.GIT_CHECKOUT_REPO }}
       with:
-        fetch-depth: ${{ steps.calculate_depth.outputs.calc_depth }}
+        fetch-depth: ${{ needs.calculate_depth.outputs.calc_depth }}
         repository: ${{ inputs.GIT_CHECKOUT_REPO }}
         ref: ${{ inputs.GIT_CHECKOUT_REF }}
         token: ${{ secrets.CI_PAT }}     
