fine tune release strategy

--- a/.github/workflows/calculate-version.yaml
+++ b/.github/workflows/calculate-version.yaml
@@ -11,6 +11,7 @@ on:
       GIT_CHECKOUT_REF:
         required: false
         type: string
+        default: ${{ github.ref_name }}
       WITH_REPO_TAGGING: 
         required: false
         type: boolean
