--- a/.github/workflows/calculate-version.yaml
+++ b/.github/workflows/calculate-version.yaml
@@ -49,14 +49,14 @@ jobs:
   calculate_depth:
     runs-on: ubuntu-latest
     outputs:
-      calc_depth: ${{ steps.calculate_depth.outputs.calc_depth }}
+      calculate_depth: ${{ steps.calculate_depth.outputs.calculate_depth }}
     steps:
       - name: calculate_depth
         run: |
           if [[ "${{ inputs.GIT_CHECKOUT_TAG }}" == "*" ]]; then
-            echo "calc_depth=100" >> $GITHUB_OUTPUT
+            echo "calculate_depth=100" >> $GITHUB_OUTPUT
           else
-            echo "calc_depth=100" >> $GITHUB_OUTPUT
+            echo "calculate_depth=100" >> $GITHUB_OUTPUT
           fi
           cat $GITHUB_OUTPUT
   calculate-version:
@@ -69,13 +69,13 @@ jobs:
       uses: actions/checkout@v4
       if: ${{ inputs.GIT_CHECKOUT_REPO == '' }}
       with:
-        fetch-depth: ${{ needs.calculate_depth.outputs.calc_depth }}
+        fetch-depth: ${{ needs.calculate_depth.outputs.calculate_depth }}
         ref: ${{ inputs.GIT_CHECKOUT_REF }}
     - name: Checkout Repository (Away)
       uses: actions/checkout@v4
       if: ${{ inputs.GIT_CHECKOUT_REPO }}
       with:
-        fetch-depth: ${{ needs.calculate_depth.outputs.calc_depth }}
+        fetch-depth: ${{ needs.calculate_depth.outputs.calculate_depth }}
         repository: ${{ inputs.GIT_CHECKOUT_REPO }}
         ref: ${{ inputs.GIT_CHECKOUT_REF }}
         token: ${{ secrets.CI_PAT }}     
