--- a/.github/workflows/calculate-version.yaml
+++ b/.github/workflows/calculate-version.yaml
@@ -64,13 +64,13 @@ jobs:
         uses: actions/checkout@v4
         if: ${{ inputs.GIT_CHECKOUT_REPO == '' }}
         with:
-          fetch-depth: ${{ steps.calculate_depth.outputs.calculate_depth }}
+          fetch-depth: 100
           ref: ${{ inputs.GIT_CHECKOUT_REF }}
       - name: Checkout Repository (Away)
         uses: actions/checkout@v4
         if: ${{ inputs.GIT_CHECKOUT_REPO }}
         with:
-          fetch-depth: ${{ steps.calculate_depth.outputs.calculate_depth }}
+          fetch-depth: 100
           repository: ${{ inputs.GIT_CHECKOUT_REPO }}
           ref: ${{ inputs.GIT_CHECKOUT_REF }}
           token: ${{ secrets.CI_PAT }}
