--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -29,7 +29,7 @@ jobs:
           get_tag() {
               local commit=$1
               # Get the tag for the commit, or return an empty string if none
-              git describe --tags --exact-match "$commit" 2>/dev/null || echo ""
+              git tag --points-at "$commit" 2>/dev/null | sort -V  | tail -n 1 || echo ""
           }
           file_path="version_config_files/release_major_config.yaml"
           prev_tag=""
