--- a/.github/workflows/calculate-version.yaml
+++ b/.github/workflows/calculate-version.yaml
@@ -55,13 +55,13 @@ jobs:
         uses: actions/checkout@v4
         if: ${{ inputs.GIT_CHECKOUT_REPO == '' }}
         with:
-          fetch-depth: 100
+          fetch-depth: 10000000
           ref: ${{ inputs.GIT_CHECKOUT_REF }}
       - name: Checkout Repository (Away)
         uses: actions/checkout@v4
         if: ${{ inputs.GIT_CHECKOUT_REPO }}
         with:
-          fetch-depth: 100
+          fetch-depth: 10000000
           repository: ${{ inputs.GIT_CHECKOUT_REPO }}
           ref: ${{ inputs.GIT_CHECKOUT_REF }}
           token: ${{ secrets.CI_PAT }}
