--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -18,6 +18,7 @@ jobs:
     outputs:
       config_file: ${{ steps.get_increment_strategies.outputs.config_file }}
       checkout_tag: ${{ steps.get_increment_strategies.outputs.checkout_tag }}
+      checkout_depth: ${{ steps.get_increment_strategies.outputs.checkout_depth }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -33,6 +34,7 @@ jobs:
           }
           file_path="version_config_files/release_major_config.yaml"
           prev_tag="*"
+          c_depth="0"
           if [[ "$GITHUB_EVENT_NAME" != "pull_request" ]]
           then
             head_tag=$(get_tag "$GITHUB_SHA" )
@@ -52,6 +54,7 @@ jobs:
             if [[ $tag_to_compare =~ $prev_tag_regex ]] && [[ $actual_branch =~ $actual_branch_regex ]]
             then
                 file_path="version_config_files/release_patch_config.yaml"
+                c_depth="10000000"
             else
                 prev_tag="*"
             fi
@@ -60,6 +63,7 @@ jobs:
           echo "Checkout tag to use: $prev_tag"
           echo "config_file=$file_path" >> $GITHUB_OUTPUT
           echo "checkout_tag=$prev_tag" >> $GITHUB_OUTPUT
+          echo "checkout_depth=$c_depth" >> $GITHUB_OUTPUT
 
   calculate_version:
     uses: ./.github/workflows/calculate-version.yaml
@@ -70,3 +74,4 @@ jobs:
       WITH_REPO_TAGGING: true
       VERSION_CONFIG_FILE: ${{needs.get_increment_strategies.outputs.config_file}}
       GIT_CHECKOUT_TAG: ${{needs.get_increment_strategies.outputs.checkout_tag}}
+      GIT_CHECKOUT_DEPTH: ${{needs.get_increment_strategies.outputs.checkout_depth}}
