--- a/.github/workflows/calculate-version.yaml
+++ b/.github/workflows/calculate-version.yaml
@@ -10,8 +10,8 @@ on:
         default: "*"
       GIT_CHECKOUT_DEPTH:
         required: false
-        type: string
-        default: "0"
+        type: number
+        default: 0
       GIT_CHECKOUT_REF:
         required: false
         type: string
@@ -59,18 +59,18 @@ jobs:
         uses: actions/checkout@v4
         if: ${{ inputs.GIT_CHECKOUT_REPO == '' }}
         with:
-          fetch-depth: ${{ inputs.GIT_CHECKOUT_REF }}
+          fetch-depth: ${{ inputs.GIT_CHECKOUT_DEPTH }}
           ref: ${{ inputs.GIT_CHECKOUT_REF }}
       - name: Checkout Repository (Away)
         uses: actions/checkout@v4
         if: ${{ inputs.GIT_CHECKOUT_REPO }}
         with:
-          fetch-depth: ${{ inputs.GIT_CHECKOUT_REF }}
+          fetch-depth: ${{ inputs.GIT_CHECKOUT_DEPTH }}
           repository: ${{ inputs.GIT_CHECKOUT_REPO }}
           ref: ${{ inputs.GIT_CHECKOUT_REF }}
           token: ${{ secrets.CI_PAT }}
       - name: Fetch partial tag list
-        if: ${{ inputs.GIT_CHECKOUT_TAG != '' && inputs.GIT_CHECKOUT_DEPTH != '0'  }}
+        if: ${{ inputs.GIT_CHECKOUT_TAG != '' && inputs.GIT_CHECKOUT_DEPTH != 0  }}
         env:
           CHECKOUT_TAG: ${{ inputs.GIT_CHECKOUT_TAG }}
         run: |
