--- a/.github/workflows/calculate-version.yaml
+++ b/.github/workflows/calculate-version.yaml
@@ -105,6 +105,7 @@ jobs:
         run: |
           sed -i 's/<<RELEASE_INCREMENT>>/${R_INCREMENT}/g' ${V_CONFIG_PATH}
           sed -i 's/<<DEVELOP_INCREMENT>>/${D_INCREMENT}/g' ${V_CONFIG_PATH}
+          cat ${V_CONFIG_PATH}
       - name: Determine Version
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0.9.15
