--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       release_increment: ${{ steps.get_increment_strategies.outputs.release_increment }}
+      develop_increment: ${{ steps.get_increment_strategies.outputs.develop_increment }}
       checkout_tag: ${{ steps.get_increment_strategies.outputs.checkout_tag }}
       checkout_depth: ${{ steps.get_increment_strategies.outputs.checkout_depth }}
     steps:
@@ -35,6 +36,7 @@ jobs:
           r_increment='Major'
           prev_tag="*"
           c_depth="0"
+          d_increment='Minor'
           if [[ "$GITHUB_EVENT_NAME" != "pull_request" ]]
           then
             head_tag=$(get_tag "$GITHUB_SHA" )
@@ -49,8 +51,12 @@ jobs:
             actual_branch=$(git symbolic-ref --short HEAD)
             tag_to_compare=${head_tag:-$prev_tag}
             actual_branch_regex="^releases?[/-].+|^patch[/-].+"
+            dev_regex="^dev(elop)?(ment)?$"
             prev_tag_regex="^[[:digit:]]+\.0+\.[[:digit:]]+$|patch"
-            
+            if [[ $tag_to_compare =~ "patch" ]] && [[ $actual_branch =~ $dev_regex ]]
+            then
+                d_increment='Patch'
+            fi
             if [[ $tag_to_compare =~ $prev_tag_regex ]] && [[ $actual_branch =~ $actual_branch_regex ]]
             then
                 r_increment='Patch'
@@ -65,6 +71,7 @@ jobs:
           echo "release_increment=$r_increment" >> $GITHUB_OUTPUT
           echo "checkout_tag=$prev_tag" >> $GITHUB_OUTPUT
           echo "checkout_depth=$c_depth" >> $GITHUB_OUTPUT
+          echo "develop_increment=$d_increment" >> $GITHUB_OUTPUT
 
   calculate_version:
     uses: ./.github/workflows/calculate-version.yaml
@@ -77,3 +84,5 @@ jobs:
       GIT_CHECKOUT_TAG: ${{needs.get_increment_strategies.outputs.checkout_tag}}
       GIT_CHECKOUT_DEPTH: ${{needs.get_increment_strategies.outputs.checkout_depth}}
       VERSION_CONF_RELEASE_INCREMENT: ${{needs.get_increment_strategies.outputs.release_increment}}
+      VERSION_CONF_DEVELOP_INCREMENT: ${{needs.get_increment_strategies.outputs.develop_increment}}
+      
