--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -51,17 +51,18 @@ jobs:
                 prev_tag=""
             done
             tag_to_compare=${head_tag:-$prev_tag}
-            rel_patch_regex="^releases?[/-].+|^patch[/-].+"
+            rel_patch_branch_regex="^releases?[/-].+|^patch[/-].+"
+            rel_patch_commit_regex="release|patch"
             dev_regex="^dev(elop)?(ment)?$"
             patch_regex="patch"
             prev_tag_regex="^[[:digit:]]+\.0+\.[[:digit:]]+$|patch"
             commit_message=$(echo '${{ github.event.commits[0].message }}' | tr '[:upper:]' '[:lower:]')
-            if [[ ( $tag_to_compare =~ $patch_regex || ( $commit_message =~ '[[:space:]]?merge[[:space:]]' && $commit_message =~ $rel_patch_regex ) )  && $ACTUAL_BRANCH_NAME =~ $dev_regex ]]
+            if [[ ( $tag_to_compare =~ $patch_regex || ( $commit_message =~ '[[:space:]]?merge[[:space:]]' && $commit_message =~ $rel_patch_commit_regex ) )  && $ACTUAL_BRANCH_NAME =~ $dev_regex ]]
             then
               d_increment='Patch'
             fi;
           
-            if [[ $tag_to_compare =~ $prev_tag_regex && $ACTUAL_BRANCH_NAME =~ $rel_patch_regex ]]
+            if [[ $tag_to_compare =~ $prev_tag_regex && $ACTUAL_BRANCH_NAME =~ $rel_patch_branch_regex ]]
             then
                 r_increment='Patch'
                 c_depth="10000000"
