Modifying README.md

--- a/.github/version_config_files/VersionConfig.yaml
+++ b/.github/version_config_files/VersionConfig.yaml
@@ -20,7 +20,7 @@ branches:
   pull-request:
     regex: ^(pull|pull\-requests|pr)[/-]
     mode: ContinuousDeployment
-    tag: PullRequest
+    tag: "PullRequest"
     increment: None
     prevent-increment-of-merged-branch-version: false
     tag-number-pattern: '[/-](?<number>\d+)[-/]'
